--- a/package.json
+++ b/package.json
@@ -4,14 +4,28 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "npm run build && electron ./dist/main.js",
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "npm run clean && babel -d ./dist ./src",
+    "eslint": "eslint src --fix"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "electron": "^4.1.4"
-  },
   "dependencies": {
-    "exceljs": "^1.9.0"
+    "exceljs": "^1.9.0",
+    "electron": "^4.1.4",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.7.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "jest": "^24.7.1"
   }
 }
